Imported the PRETTY-PRINTER from CMUCL and integrated it with the previously commited format.lsp. The old pretty printer remains merged in and is used by default.

--- a/src/clos/load.lsp.in
+++ b/src/clos/load.lsp.in
@@ -16,6 +16,8 @@
   "src:clos;generic.lsp"
   "src:clos;fixup.lsp"
   "src:clos;inspect.lsp"
+  #+cmu-format
+  "src:lsp;pprint.lsp"
   "src:clos;conditions.lsp"))
 
 #-cross
