format.lsp needs pprint.lsp, so load it twice.

--- a/src/bare.lsp.in
+++ b/src/bare.lsp.in
@@ -34,6 +34,8 @@
 (print *features*)
 #+(or (and wants-clos ecl-min) cross)
 (load "clos/load.lsp")
+#+cmu-format
+(load "src:lsp;format.lsp" :verbose nil)
 
 ;;;
 ;;; * Load the compiler.
