--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -53,11 +53,11 @@ ecl$(EXE): ecl_min$(EXE) compile.lsp sysfun.lsp
 		./ecl_min < compile.lsp; \
 	fi
 
-ecl_min$(EXE): $(LIBRARIES) .gdbinit libecl.a
+ecl_min$(EXE): $(LIBRARIES) .gdbinit @LIBPREFIX@eclmin.@LIBEXT@
 	if [ -f CROSS-COMPILER ]; then \
 		touch $@; \
 	else \
-		$(CC) $(LDFLAGS) -o $@ c/cinit.o -L./ @LIBPREFIX@ecl.@LIBEXT@ -lgmp @GCLIB@ $(LIBS);\
+		$(CC) $(LDFLAGS) -o $@ cinit.o -L./ @LIBPREFIX@eclmin.@LIBEXT@ -lgmp @GCLIB@ $(LIBS);\
 	fi
 
 .gdbinit: $(srcdir)/util/gdbinit
@@ -73,7 +73,7 @@ ecl-config: ecl-config.pre
 	    -e 's,@includedir\\@,$(libdir)/h,' ecl-config.pre > ecl-config
 
 
-@LIBPREFIX@ecl.@LIBEXT@: @LIBPREFIX@gmp.@LIBEXT@ @LIBPREFIX@gc.@LIBEXT@ lsp/config.lsp
+@LIBPREFIX@eclmin.@LIBEXT@: @LIBPREFIX@gmp.@LIBEXT@ @LIBPREFIX@gc.@LIBEXT@ lsp/config.lsp
 	cd c; $(MAKE)
 @LIBPREFIX@gc.@LIBEXT@:
 	if (echo $(SUBDIR) | grep gc); then \
