*** empty log message ***

--- a/src/configure.in
+++ b/src/configure.in
@@ -149,7 +149,7 @@ dnl		Installation directories
 dnl
 libdir="${libdir}/ecl"
 includedir="${libdir}/ecl/h"
-if [ -z "${docdir}" ]; then docdir="${shareddir}/doc/ecl"; fi
+if test -z "${docdir}"; then docdir="${shareddir}/doc/ecl"; fi
 
 dnl ----------------------------------------------------------------------
 dnl		Checks which do not come with autoconf
