--- a/src/doc/Makefile.in
+++ b/src/doc/Makefile.in
@@ -5,7 +5,7 @@ prefix=@prefix@
 exec_prefix=@exec_prefix@
 infodir = @infodir@
 mandir=@mandir@
-dodcdir=@docdir@
+doddir=@docdir@
 manext=1
 
 INFOEXT = @INFOEXT@
