When invoking gcc, some of the pathnames might contain spaces. Enclose all pathnames in double-quotes to avoid problems.

--- a/src/cmp/cmpcfg.lsp.in
+++ b/src/cmp/cmpcfg.lsp.in
@@ -6,7 +6,7 @@
 (setq *cc* "@ECL_CC@")
 (setq *cc-flags* "@CFLAGS@ @ECL_CFLAGS@")
 (setq *ld-flags* "@LDRPATH@ @LDFLAGS@ -lecl -lgmp -lgc @CLIBS@")
-(setq *ld-format* "~A -o ~A -L~A ~{~A ~} ~@?")
+(setq *ld-format* "~S -o ~S -L~S ~{~S ~} ~@?")
 #+dlopen
 (setq *ld-shared-flags* "@LDRPATH@ @SHARED_LDFLAGS@ @LDFLAGS@ -lecl @CLIBS@")
 #+dlopen
