--- a/src/compile.lsp.in
+++ b/src/compile.lsp.in
@@ -36,11 +36,11 @@
 ;;;   with an already installed copy of ECL.
 ;;;
 (setq c::*cc-flags*
-      "@CFLAGS@ @ECL_CFLAGS@ -I@true_srcdir@/h -I@true_srcdir@/gmp -I@true_builddir@/h"
+      "@CFLAGS@ @ECL_CFLAGS@ -I\"@true_srcdir@\"/h -I\"@true_srcdir@\"/gmp -I\"@true_builddir@\"/h"
       c::*cc-format*
-      "~A ~A ~:[~*~;~A~] -I@true_builddir@/h~* -w -c ~A -o ~A"
+      "~S ~A ~:[~*~;~A~] -I\"@true_builddir@\"/h~* -w -c ~S -o ~S"
       c::*ld-format*
-      "~A -o ~A -L@true_builddir@~* ~{~A ~} ~@?")
+      "~S -o ~S -L\"@true_builddir@\"~* ~{~S ~} ~@?")
 #-dlopen 
 (setf c::*ld-flags*
       "@LDFLAGS@ @LDRPATH@ @LIBPREFIX@ecl.@LIBEXT@ -lgmp @GCLIB@ @CLIBS@")
@@ -89,7 +89,8 @@ ranlib ../@LIBPREFIX@ecl.@LIBEXT@")
 		"c/main.@OBJEXT@"
 		"@LIBPREFIX@lsp.@LIBEXT@"
 		"@LIBPREFIX@eclmin.@LIBEXT@"
-		"-lgmp @GCLIB@"
+		"-lgmp"
+		"@GCLIB@"
 		. #.(unless (equalp "@LDINSTALLNAME@" "")
 			'("@LDINSTALLNAME@"))))
 
