--- a/src/compile.lsp.in
+++ b/src/compile.lsp.in
@@ -38,9 +38,9 @@
 (setq c::*cc-flags*
       "@CFLAGS@ @ECL_CFLAGS@ -I\"@true_srcdir@\"/h -I\"@true_srcdir@\"/gmp -I\"@true_builddir@\"/h"
       c::*cc-format*
-      "~S ~A ~:[~*~;~A~] -I\"@true_builddir@\"/h~* -w -c ~S -o ~S"
+      "~A ~A ~:[~*~;~A~] -I\"@true_builddir@\"/h~* -w -c ~S -o ~S"
       c::*ld-format*
-      "~S -o ~S -L\"@true_builddir@\"~* ~{~S ~} ~@?")
+      "~A -o ~S -L\"@true_builddir@\"~* ~{~S ~} ~@?")
 #-dlopen 
 (setf c::*ld-flags*
       "@LDFLAGS@ @LDRPATH@ @LIBPREFIX@ecl.@LIBEXT@ -lgmp @GCLIB@ @CLIBS@")
