Several fixes. Functions are now created only with C1COMPILE-FUNCTION.

--- a/src/cmp/cmpcfg.lsp.in
+++ b/src/cmp/cmpcfg.lsp.in
@@ -5,8 +5,11 @@
 (in-package "COMPILER")
 (setq *cc* "@ECL_CC@")
 (setq *cc-flags* "@CFLAGS@ @ECL_CFLAGS@")
-(setq *ld-flags* "@LDRPATH@ @LDFLAGS@ -lecl -lgmp -lgc @CLIBS@")
 (setq *ld-format* "~A -o ~S -L~S ~{~S ~} ~@?")
+#-dlopen
+(setq *ld-flags* "@LDRPATH@ @LDFLAGS@ -lecl @STATICLIBS@ @CLIBS@")
+#+dlopen
+(setq *ld-flags* "@LDRPATH@ @LDFLAGS@ -lecl @CLIBS@")
 #+dlopen
 (setq *ld-shared-flags* "@LDRPATH@ @SHARED_LDFLAGS@ @LDFLAGS@ -lecl @CLIBS@")
 #+dlopen
