Removed attribute "noreturn" because GCC does not take into account the possibility of longjmp into the function that called a noreturn function. Simplified the FORMAT routine abstracting the operations on arguments, so that they can be easily reimplemented when the type of stack changes. FORMAT does no longer use the lisp stack, but builds lists of arguments.

--- a/src/compile.lsp.in
+++ b/src/compile.lsp.in
@@ -85,12 +85,13 @@ ranlib ../@LIBPREFIX@ecl.@LIBEXT@'")
 ;;;
 ;;; We do not need the -rpath flag for the library, nor -lecl.
 ;;;
-(let ((c::*ld-shared-flags* "@SHARED_LDFLAGS@ @LDFLAGS@ @STATICLIBS@ @CLIBS@")
+(let ((c::*ld-shared-flags* "@SHARED_LDFLAGS@ @LDFLAGS@ @CLIBS@")
       (c::*cc-flags* (concatenate 'string "-I@true_builddir@/c " c::*cc-flags*)))
   (c::shared-cc (compile-file-pathname "ecl" :type :dll)
 		"c/main.@OBJEXT@"
 		"@LIBPREFIX@lsp.@LIBEXT@"
 		"@LIBPREFIX@eclmin.@LIBEXT@"
+		"@STATICLIBS@"
 		. #.(unless (equalp "@LDINSTALLNAME@" "")
 			'("@LDINSTALLNAME@"))))
 
