--- a/src/lsp/config.lsp.in
+++ b/src/lsp/config.lsp.in
@@ -67,9 +67,16 @@ Returns, as a string, the version of the software under which ECL runs."
 ;; * Set configuration pathnames. Notice the trailing slash!
 ;;   Otherwise it would not be a directory.
 ;;
-#-mingw32
+#-(and mingw32 msvc)
 (si::pathname-translations "SYS" '(("**;*.*" "@ecldir@/**/*.*")))
 #+mingw32
 (si::pathname-translations "SYS"
   `(("**;*.*" ,(merge-pathnames "**/*.*" (si::argv 0)))))
+#+msvc
+(si::pathname-translations "SYS"
+  `(("**;*.*" ,(merge-pathnames "**/*.*" (si::get-library-pathname)))))
+#-msvc
 (si::pathname-translations "HOME" '(("**;*.*" "~/**/*.*")))
+#+msvc
+(si::pathname-translations "HOME"
+  `(("**;*.*" ,(merge-pathnames "**/*.*" (user-homedir-pathname)))))
