--- a/src/lsp/config.lsp.in
+++ b/src/lsp/config.lsp.in
@@ -69,10 +69,7 @@ Returns, as a string, the version of the software under which ECL runs."
 ;;
 #-(and mingw32 msvc)
 (si::pathname-translations "SYS" '(("**;*.*" "@ecldir@/**/*.*")))
-#+mingw32
-(si::pathname-translations "SYS"
-  `(("**;*.*" ,(merge-pathnames "**/*.*" (si::argv 0)))))
-#+msvc
+#+(or mingw32 msvc)
 (si::pathname-translations "SYS"
   `(("**;*.*" ,(merge-pathnames "**/*.*" (si::get-library-pathname)))))
 #-msvc
