List all interesting functions created by the lisp->C compiler in external.h and leave the task of building function objects for these functions to all_symbols2.o

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -57,7 +57,7 @@ ecl_min$(EXE): $(LIBRARIES) .gdbinit @LIBPREFIX@eclmin.@LIBEXT@
 	if [ -f CROSS-COMPILER ]; then \
 		touch $@; \
 	else \
-		$(CC) $(LDFLAGS) -o $@ cinit.o -L./ @LIBPREFIX@eclmin.@LIBEXT@ $(LIBS);\
+		$(CC) $(LDFLAGS) -o $@ cinit.o c/all_symbols.o -L./ @LIBPREFIX@eclmin.@LIBEXT@ $(LIBS);\
 	fi
 
 .gdbinit: $(srcdir)/util/gdbinit
